[package]
name = "secp256k1-signer-example"
version = "0.1.0"
edition = "2021"

resolver = "2"

[dependencies]
solana-client = "=2.0.5"
solana-sdk = "=2.0.5"
solana-program = "=2.0.5"
hex = "0.4.3"
sha2 = "0.10.8"
borsh = {version = "1.2.1", features = ["derive"]}
rand = "0.8.5"
libsecp256k1 = "0.7.1"
ark-serialize = {version = "0.4.2", features = ["std"]}
anyhow = "1.0.86"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["macros", "sync", "rt-multi-thread"] }
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
env_logger = "0.11.5"
thiserror = "1.0.63"
base64 = "0.21.7"
